h4_vision/check_errors_v14.txt
    Checking windows v0.58.0
   Compiling h4_vision v0.1.0 (D:\PROJECTS\h4_GameHack\h4_vision)
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    Checking fontique v0.7.0
    Checking h4_engine v0.1.0 (D:\PROJECTS\h4_GameHack\h4_engine)
    Checking parley v0.7.0
    Checking i-slint-common v1.15.1
    Checking i-slint-core v1.15.1
    Checking i-slint-renderer-femtovg v1.15.1
    Checking i-slint-renderer-software v1.15.1
    Checking i-slint-backend-qt v1.15.1
    Checking i-slint-backend-winit v1.15.1
    Checking i-slint-backend-selector v1.15.1
    Checking slint v1.15.1
error[E0432]: unresolved import `windows::Win32::System::Console`
  --> h4_vision\src\main.rs:70:37
   |
70 |         use windows::Win32::System::Console::GetConsoleWindow;
   |                                     ^^^^^^^ could not find `Console` in `System`
   |
note: found an item that was configured out
  --> C:\Users\h4dev\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\System\mod.rs:18:9
   |
17 | #[cfg(feature = "Win32_System_Console")]
   |       -------------------------------- the item is gated behind the `Win32_System_Console` feature
18 | pub mod Console;
   |         ^^^^^^^

warning: unused imports: `HWND_TOP`, `SWP_NOSIZE`, `SWP_NOZORDER`, and `SetWindowPos`
  --> h4_vision\src\main.rs:71:73
   |
71 | ...Messaging::{GetSystemMetrics, SetWindowPos, SWP_NOSIZE, SWP_NOZORDER, SM_CXSCREEN, SM_CYSCREEN, HWND_TOP};
   |                                  ^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^^                            ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `ui_refresh`
   --> h4_vision\src\main.rs:175:9
    |
175 |     let ui_refresh = ui_handle.clone();
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_ui_refresh`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `h4_vision` (bin "h4_vision") generated 2 warnings
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: could not compile `h4_vision` (bin "h4_vision") due to 1 previous error; 2 warnings emitted
